--- a/TheCodeCamp/TheCodeCamp.csproj
+++ b/TheCodeCamp/TheCodeCamp.csproj
@@ -286,6 +286,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\CampsController.cs" />
+    <Compile Include="Controllers\OperationsController.cs" />
     <Compile Include="Controllers\TalksController.cs" />
     <Compile Include="Data\CampContext.cs" />
     <Compile Include="Data\CampMappingProfile.cs" />
@@ -327,6 +328,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Camps\" />
+    <Folder Include="Views\Operations\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
